# smartknob

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  lint.yml
.zed/: settings.json
src/: error.rs  lib.rs  main.rs
src/app/: mod.rs
src/hardware/: error.rs  mod.rs  spi.rs
src/peripherals/display/: commands.rs  config.rs  error.rs  graphics.rs  mod.rs
src/peripherals/display/graphics/: color.rs  mod.rs  primitives.rs  text.rs
src/ui/: mod.rs
src/ui/views/: light.rs  mod.rs
