[package]
name = "smartknob"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core async runtime
embassy-executor = "0.9.1"
embassy-time = "0.4.0"

# Standard embedded traits
embedded-hal-async = "1.0.0"

# Utilities
log = "0.4.27"
libm = "0.2.15"

# ESP32-specific crates
esp-hal = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = ["esp32c6", "unstable"] }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = ["esp32c6"] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = ["panic-handler", "println", "esp32c6"] }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = ["esp32c6"] }
esp-println = { git = "https://github.com/esp-rs/esp-hal", branch = "main", features = ["log-04", "esp32c6"] }
esp-alloc = { git = "https://github.com/esp-rs/esp-alloc", branch = "main" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
